--- a/src/App/ShopThemeBundle/Resources/views/Blocks/publicidad.bloque.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/publicidad.bloque.html.twig
@@ -3,7 +3,7 @@
 
 <hr>
 
-<div class="row"  >
+<div class="row  bloque_publicidad" style="cursor:pointer;"  onclick="window.location='{{  publicidad.url  }}'" >
 
 	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 "   >
 	<h4 class="titulo-publicidad "  >  {{  publicidad.nombre }} </h4>
