--- a/src/App/ShopThemeBundle/Resources/views/template.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/template.html.twig
@@ -27,6 +27,8 @@
 
 
 
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "72ba2cfa-41b2-4d7a-8019-f2136543c4fc", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
 
 
@@ -53,7 +55,7 @@
 
 
 
-
+      
       <!-- contenido de banner  -->
       <div class="col-sm-1 col-lg-1 col-md-1 table-col col-banner"  style="padding-top:45px;"    >
        {{ render(controller('AppShopThemeBundle:Default:getPublicidad')) }}
@@ -185,7 +187,7 @@
  <script type="text/javascript" src="{{ asset_url }}"></script>
  {% endjavascripts %}
 
- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-509db8b030e9560b"></script>
+ 
  <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
  <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
 
