--- a/app/Resources/SonataNewsBundle/views/Post/archive.html.twig
+++ b/app/Resources/SonataNewsBundle/views/Post/archive.html.twig
@@ -9,72 +9,114 @@
  * file that was distributed with this source code.
  */
 
-#}
+ #}
 
-{% extends "AppShopThemeBundle::template.html.twig" %}
+ {% extends "AppShopThemeBundle::template.html.twig" %}
 
 
-{% block sonata_page_breadcrumb %}
-    <div class="row-fluid clearfix">
-        {{ sonata_block_render_event('breadcrumb', { 'context': 'news_archive', 'collection': collection, 'tag': tag, 'current_uri': app.request.requestUri }) }}
-    </div>
+ {% block sonata_page_breadcrumb %}
+ <div class="row-fluid clearfix">
+    {{ sonata_block_render_event('breadcrumb', { 'context': 'news_archive', 'collection': collection, 'tag': tag, 'current_uri': app.request.requestUri }) }}
+</div>
 {% endblock %}
 
 
 {% block contenido %}
-    
 
 
 
-<h1>{{ 'title_archive'|trans({}, 'SonataNewsBundle') }}</h1>
 
-<div class="sonata-blog-post-list">
-    {% for post in pager.getResults() %}
-        <div class="sonata-blog-post-container">
-            <header>
-                <h2 class="sonata-blog-post-title">
-                    <a href="{{ url('sonata_news_view', { 'permalink': sonata_news_permalink(post) }) }}">{{ post.title }}</a>
-                </h2>
 
-                <div class="sonata-blog-post-information">
-                    <span class="sonata-blog-post-author">{{ 'archive_author'|trans({'%author%': post.author }, 'SonataNewsBundle') }}</span> |
 
-                    <i class="icon-calendar"></i>
-                    {{ post.publicationDateStart | format_date }} |
 
-                    <i class="icon-comment"></i>
-                    <span class="sonata-blog-post-comments-count">{{ 'comments_count'|trans({'%comments_count%': post.commentsCount }, 'SonataNewsBundle') }}</span>
 
-                    <div class="sonata-blog-post-tags">
-                        {% if post.tags|length > 1 %}
-                            <i class="icon-tags"></i>
-                        {% else %}
-                            <i class="icon-tag"></i>
-                        {% endif %}
-                        {{ 'published_under'|transchoice(post.tags|length, {}, 'SonataNewsBundle') }}
 
-                        {% for tag in post.tags %}
-                            <a href="{{ url('sonata_news_tag', { 'tag': tag.slug } ) }}">{{ tag.name }}</a>{% if not loop.last %},{% endif %}
-                        {% endfor %}
-                    </div>
-                </div>
-            </header>
 
-            <div class="sonata-blog-post-abtract">
-                {{ post.abstract }}
+
+<div class="col-md-12"   >
+
+
+
+
+    <div class="row">
+        <div class="col-md-12 ">
+            <div class="lato">
+                <!-- <h2 class="lato" >Comprar</h2> -->
+                <p class="lead latto"  style="font-size:25px;" >Noticias</p>
             </div>
         </div>
+    </div>
 
-        <hr />
-    {% else %}
-        {{ 'no_post_found'|trans({}, 'SonataNewsBundle') }}
-    {% endfor %}
+    <div class="row">
+        <div class="col-md-12 ">
+            <div class="panel panel-default artsenal-panel "  style="padding-left: 20px; padding-right: 20px;padding-top:5px;" >
+                <div class="panel-body">
 
-    <ul class="pager">
-        <li{% if pager.page == pager.lastPage %} class="disabled"{% endif %}><a href="{{ url(route, route_parameters|merge({'page': pager.nextpage})) }}" title="{{ 'link_previous_page'|trans({}, 'SonataNewsBundle') }}">{{ 'link_previous_page'|trans({}, 'SonataNewsBundle') }}</a>
-        <li{% if pager.page == pager.firstPage %} class="disabled"{% endif %}><a href="{{ url(route, route_parameters|merge({'page': pager.previouspage})) }}" title="{{ 'link_next_page'|trans({}, 'SonataNewsBundle') }}">{{ 'link_next_page'|trans({}, 'SonataNewsBundle') }}</a></li>
-    </ul>
+                    <div class="container-fluid">
+
+
+                        <div class="row">
+
+
+
+
+
+                            <div class="sonata-blog-post-list">
+                                {% for post in pager.getResults() %}
+                                <div class="sonata-blog-post-container">
+                                    <header>
+                                        <h2 class="sonata-blog-post-title">
+                                            <a  class="lead latto" style="color:#b4328c;"  href="{{ url('sonata_news_view', { 'permalink': sonata_news_permalink(post) }) }}">{{ post.title }}</a>
+                                        </h2>
+
+                                        <div class="sonata-blog-post-information">
+                                           
+
+                                            <i class="icon-calendar"></i>
+                                            {{ post.publicationDateStart | format_date }} |
+
+                                            <i class="icon-comment"></i>
+                                            <span class="sonata-blog-post-comments-count">{{ 'comments_count'|trans({'%comments_count%': post.commentsCount }, 'SonataNewsBundle') }}</span>
+
+                                            
+                                        </div>
+                                    </header>
+
+                                    <div class="sonata-blog-post-abtract">
+                                        {{ post.abstract }}
+                                    </div>
+                                </div>
+
+                                <hr />
+                                {% else %}
+                                {{ 'no_post_found'|trans({}, 'SonataNewsBundle') }}
+                                {% endfor %}
+
+                                <ul class="pager">
+                                    <li{% if pager.page == pager.lastPage %} class="disabled"{% endif %}><a href="{{ url(route, route_parameters|merge({'page': pager.nextpage})) }}" title="{{ 'link_previous_page'|trans({}, 'SonataNewsBundle') }}">{{ 'link_previous_page'|trans({}, 'SonataNewsBundle') }}</a>
+                                    <li{% if pager.page == pager.firstPage %} class="disabled"{% endif %}><a href="{{ url(route, route_parameters|merge({'page': pager.previouspage})) }}" title="{{ 'link_next_page'|trans({}, 'SonataNewsBundle') }}">{{ 'link_next_page'|trans({}, 'SonataNewsBundle') }}</a></li>
+                                </ul>
+                            </div>
+
+
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
 </div>
+
+
+
+
 
 
 {% endblock %}
