--- a/src/App/ShopThemeBundle/Resources/public/css/estilo.css
+++ b/src/App/ShopThemeBundle/Resources/public/css/estilo.css
@@ -15,7 +15,7 @@
 }
 
 body{
-	padding-top: 40px;
+	padding-top: 110px;
 }
 
 
@@ -93,7 +93,14 @@ ul.nav.navbar-nav li a{
 	background-color: rgb(235,235,235);
 	border-width: 1px;
 	border:1px solid lightgray;
+	vertical-align: middle;
 	height: 35px;
+	background-image: url('../images/buscar.png') ;
+	background-size: 30px 30px;
+    background-position: right; 
+    background-repeat: no-repeat;
+    padding-left: 15px;
+	line-height: normal;
 }
 
 /*fin menu*/
@@ -485,3 +492,14 @@ a.list-group-item.active{
 .form-control-error{
 	color: red;
 }
+
+.bloque_publicidad:hover{
+	text-decoration: underline;
+}
+
+
+.stMainServices{
+	height: 30px !!important;
+}
+
+
