--- a/src/App/ShopThemeBundle/Resources/views/Blocks/publicidad.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/publicidad.html.twig
@@ -1,11 +1,17 @@
 
+
+{% if publicidad %}
+
 <div class="row"  >
-<!-- <div class="row-fluid"   data-spy="affix" data-offset-top="60" data-offset-bottom="200" > -->
+	<!-- <div class="row-fluid"   data-spy="affix" data-offset-top="60" data-offset-bottom="200" > -->
 	
 
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 "   >
-	
-	{% thumbnail publicidad.image, 'small'  with { 'class' : 'banner-lateral' }  %}
-</div>
+	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 "   style="cursor:pointer" onclick="window.open('{{  publicidad.url }}')"   >
+		<div   >
+			{% thumbnail publicidad.image, 'small'  with { 'class' : 'banner-lateral' }  %}
+		</div>
+	</div>
 
 </div>
+
+{% endif %}
