--- a/src/App/ShopThemeBundle/Resources/views/Modal/producto.detalle.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Modal/producto.detalle.html.twig
@@ -70,7 +70,9 @@
 						<div class="row">
 	
 							<div class="col-sm-6">
-								<div class="addthis_native_toolbox"></div>
+								<span class='st_facebook_hcount' displayText='Facebook'></span>
+								<span class='st_twitter_hcount' displayText='Tweet'></span>
+								<span class='st__hcount' displayText=''></span>
 							</div>	
 
 							<div class="col-sm-6">
@@ -85,3 +87,9 @@
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
+
+
+<script type="text/javacript" >
+	
+
+</script>
