--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
@@ -74,6 +74,18 @@
                 Configuracion
               </a>
             </li>
+
+            <li>
+              <a href="{{  path('creacion_tienda_producto_artsenal') }}">
+                Agregar productos
+              </a>
+            </li>
+            <li>
+              <a href="{{  path('creacion_tienda_artsenal') }}">
+                Nombre de tienda
+              </a>
+            </li>
+
             
           </ul>
         </li>
@@ -84,11 +96,19 @@
             Tu Cuenta 
           </a>
           <ul class="dropdown-menu" role="menu">
+
             <li>
               <a href="{{  path('ver_compras_usuario') }}">
                 Compras
               </a>
             </li>
+
+            <li>
+              <a href="{{  path('creacion_tienda_membresia_artsenal') }}">
+                Membresia
+              </a>
+            </li>
+
             <li>
               <a href="{{  path('perfil_usuario') }}">
                 Perfil
