--- a/src/App/ShopThemeBundle/Resources/views/Tienda/ver.tienda.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Tienda/ver.tienda.html.twig
@@ -2,6 +2,20 @@
 
 
 
+{% block modal %}
+
+
+<div id="modalProducto" class="modal fade">
+
+
+
+</div>
+
+
+{% endblock %}
+
+
+
 {% block contenido %}
 
 
@@ -64,12 +78,11 @@
 
 
 
-<div id="content" class="  col-md-10">
+<div id="content" class="  col-md-9   col-md-offset-1">
 	<div class="row">
 
 		<div class="col-md-11 ">
 
-			<div class="barra_spacer_3"></div>
 			<div class="barra_spacer_2"></div>
 
 
