modulo de mensajes y cambio de tiendas

--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
@@ -184,7 +184,7 @@ Configuracion
             
             
             <div class="col-sm-4 col-lg-4 col-md-4  vertical-center submenu-item " >
-              <a href="{{  path('login_artsenal') }}">
+              <a href="{{  path('mis_mensajes') }}">
                 {% image '@AppShopThemeBundle/Resources/public/images/mensaje.png'%}
                 <img    class="  icon-submenu " src="{{ asset_url }}" alt="mensaje"/>
                 {% endimage %}
@@ -192,14 +192,14 @@ Configuracion
             </div>
             
             <div class="col-sm-4 col-lg-4 col-md-4  vertical-center submenu-item " >
-              <a href="">
+              <a href="{{  path('tienda_setup') }}">
                 {% image '@AppShopThemeBundle/Resources/public/images/corazon.png'%}
                 <img    class="  icon-submenu " src="{{ asset_url }}" alt="like"/>
                 {% endimage %}
               </a>
             </div>
             <div class="col-sm-4 col-lg-4 col-md-4  vertical-center submenu-item " >
-              <a href="{{  path('tienda_artsenal') }}">
+              <a href="{{  path('tienda_setup') }}">
                 {% image '@AppShopThemeBundle/Resources/public/images/tienda.png'%}
                 <img    class="  icon-submenu " src="{{ asset_url }}" alt="tienda"/>
                 {% endimage %}
