--- a/src/App/ShopThemeBundle/Resources/views/Blocks/producto.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/producto.html.twig
@@ -3,30 +3,14 @@
      <!-- <img src="http://placehold.it/320x150" alt=""> -->
         
         <img  class="img-responsive" src="{{ asset('/uploads/imagenes/productos/'  ~ producto.imagenes[0].url)   | apply_filter('thumbnail') }}" />
-
      <div class="caption">
 
-        <h4><a href="#">{{ producto.nombre }}</a>
+        <h4>
+            <a href="#">{{ producto.nombre }}</a>
         </h4>
         <h4 class="pull-right" >${{  producto.precio }}</h4>
         
-        <!-- 
-        <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.
-        </p>
-        -->
-
     </div>
-<!--    
-     <div class="ratings">
-        <p class="pull-right">15 reviews</p>
-        <p>
-           <span class="glyphicon glyphicon-star"></span>
-           <span class="glyphicon glyphicon-star"></span>
-           <span class="glyphicon glyphicon-star"></span>
-           <span class="glyphicon glyphicon-star"></span>
-           <span class="glyphicon glyphicon-star"></span>
-       </p>
-     </div> 
--->
+
 </div>
 </div>
