--- a/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
+++ b/src/App/ShopThemeBundle/Resources/views/Blocks/menu.usuario.html.twig
@@ -208,7 +208,7 @@ Configuracion
         
         
         <div class="col-sm-2 col-lg-2 col-md-2  vertical-center submenu-item submenu-cesta " >
-          <a href="{{ path('ver_cesta_artsenal') }}">
+          <a href="{{ path('ver_cesta') }}">
             Mi cesta
           </a>
           {% image '@AppShopThemeBundle/Resources/public/images/icon_cesta.png'%}
